[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-optimization"
version = "1.0.0"
description = "Measurable cost/latency optimisation of an LLM app: caching, routing, batching, streaming."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmopt = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
